*
* 1.2.14
*

- New NXSL function inList
- New methods in NXSL class Node: enableAgent, enableConfigurationPoll,
  enableIcmp, enableSnmp, enableStatusPoll, enableTopologyPoll
- Fixed server crash if SNMP proxy unavailable
- New MIBs: FROGFOOT-RESOURCES-MIB, MIKROTIK-MIB
- SMS driver for websms.ru service
- Management console:
   - DCI values can be shown on network map links
   - DCI value can be shown on map as immage, that checnges depending on DCI value
   - Colored background for DCIs with active thresholds in DCI summary tables
   - IP route visualisation improved
- Fixed issues: #417, #535, #536


*
* 1.2.13
*

- Improved layer 2 topology discovery performance
- Special handling of incorrect LLDP data provided by some D-Link switches 
- Optimizations in NXCP processing
- Added driver for Cisco Small Business switches
- Improved file retrieve from agent
- Windows agent: added service list and service table (System.Services)
- Fixed bug with SQL initialization script generation on HP-UX
- Fixed Oracle DB initialization error
- New macro %K (alarm key) in event actions
- Management console:
   - Implemented alarm sounds
   - Fixed "broken pipe" errors
   - Macros with alarm data in object tools 
   - Added option "Manage image library" in user access rights property page
   - Fixed image upload in web console
- Added support for sticky acknowledge in nxalarm tool
- Fixed bug causing excessive memory usage by AIX agent
- Fixed bug with interface status detection if agent runs in Solaris zone
- Fixed agent crash if HTTPS service status requested
- Android Console:
	- Fix bug missing hide notification alarm in status bar 
	- Implemented "Font size in graph/dashboard sessions" (Feature #240) 
- Fixed issues: #109, #240, #425, #428, #438, #462, #466, #471, #493, #507, #508, #527


*
* 1.2.12
*

- Support for MetaSystem UPS in UPS subagent
- Timed (temporary) alarm acknowledgement
- New subagent DBQuery - replacement for ODBCQuery 