@@ -8,6 +8,7 @@
 - Fixed server crash if SNMP proxy unavailable
 - New MIBs: FROGFOOT-RESOURCES-MIB, MIKROTIK-MIB
 - SMS driver for websms.ru service
+- Macro expansion supported in pattern in agent parameters File.Size and File.Count
 - Management console:
    - DCI values can be shown on network map links
    - DCI value can be shown on map as immage, that checnges depending on DCI value
